# nodramma-back

./: .clinerules  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.docs/: 10_PostgreSQL_And_Database_Optimization_Guide.md  11_Очереди_Kafka_Redis_RabbitMQ_в_FastAPI.md  1_init_project.md  2_config_alembic.md  3_sructure.md  4_session_refresh.md  5_event_bus.md  6_Global_State_and_Dependency_Injection_in_FastAPI.md  7_Concurrent_Database_Access_in_Multi_Instance_FastAPI_Apps.md  9_Testing_Concurrent_Database_Access_in_FastAPI.md
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_03_18_1940-bfa00ee39469_create_product.py  2025_03_18_2126-0e6021a98dc4_create_products_table.py  2025_03_18_2135-abc06f4c8b7f_add_product_model.py
src/app/: settings.py
src/app/db/: pg_client.py
src/product/: __init__.py  api.py  models.py  pg_repository.py  repositories.py  schemas.py  use_cases.py
